[package]
name = "flood"
version = "0.1.0"
edition = "2021"
author = "vvh413"
description = "Ping flood tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.5", features = ["derive"] }
pnet = "0.33.0"
