[package]
name = "flood"
version = "0.3.2"
edition = "2021"
authors = ["vvh413"]
description = "Network flood tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.5", features = ["derive"] }
pnet = "0.33.0"
rand = "0.8.5"
